fix missing padding

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -53,7 +53,7 @@ main {
 }
 
 article {
-    padding: 25px 0;
+    padding: 25px;
     max-width: 500px;
     margin: 0 auto;
 }
